--- a/lua/test/pubspec.yaml
+++ b/lua/test/pubspec.yaml
@@ -18,8 +18,51 @@ environment:
 
 dependencies:
   flutter:
-    sdk: "stuff"
+    sdk: flutter
 
   webview_flutter: ^0.3.22+1
   firebase_messaging: ^6.0.16
   logger: ^0.9.1
+  firebase_analytics: ^5.0.15
+  cloud_firestore: ^0.13.6
+  ads: ^1.0.0
+  flutter_dotenv: ^2.1.0
+  sentry: ">=3.0.0 <4.0.0"
+  flutter_hooks: ^0.14.1
+  auto_size_text: ^2.1.0
+  flutter_icons: ^1.1.0
+  timeago: ^2.0.26
+  intl: ^0.16.1
+  google_fonts: ^1.1.0
+  provider: ^3.0.0
+  shared_preferences: ^0.5.7+2
+  sqflite: ^1.3.0
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^0.1.2
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+
+  flutter_launcher_icons: "^0.7.3"
+  mockito: ^4.1.1
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/app-icon.png"
+
+# For information on the generic Dart part of this file, see the
+# following page: https://dart.dev/tools/pub/pubspec
+
+# The following section is specific to Flutter.
+flutter:
+  # The following line ensures that the Material Icons font is
+  # included with your application, so that you can use the icons in
+  # the material Icons class.
+  uses-material-design: true
+  # To add assets to your application, add an assets section, like this:
+  assets:
+    - .env.android
+    - assets/images/
