Add version virtual text for Cargo.toml
Using toml-lua (copy-pasta-d because I lazy)

--- a/lua/dependency_assist/rust/test/Cargo.toml
+++ b/lua/dependency_assist/rust/test/Cargo.toml
@@ -4,6 +4,7 @@
   authors = []
   edition = "2018"
 
+# this is a comment inside my cargo toml
 [dependencies]
   rocket = "0.4.4"
   serde = { version = "1.0.106", features = ["derive"] }
